Fix the error message behind at the form overlay

--- a/public/styles/form.css
+++ b/public/styles/form.css
@@ -158,6 +158,7 @@ select {
     justify-content: center;
     align-items: center;
     text-align: center;
+    z-index: 5;
     transition: .8s;
     -webkit-transition: .8s;
     -moz-transition: .8s;
